--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ file.reference.OpenRocket.jar-1=/media/vitinho/Data/Ubuntu-Program-Data/Apps/Ope
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.OpenRocket.jar-1}
+    ${file.reference.OpenRocket.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
